Fixing Layout Issues

--- a/client/src/stylesheets/AppModal.css
+++ b/client/src/stylesheets/AppModal.css
@@ -36,65 +36,6 @@ body {
   font-size: 18px;
 }
 
-.MiniActivityList>h4 {
-  margin: 0;
-  padding-top: 1px;
-  padding-bottom: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  border-bottom: 1px solid #dadee2;
-}
-
-.MiniActivityList>h4 span {
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.MiniActivityList>h4 a {
-  font-size: 13px;
-  font-weight: 400;
-}
-
-.MiniActivityItem {
-  display: flex;
-  align-items: center;
-}
-
-.MiniActivityList .MiniActivityItem {
-  margin-top: 15px;
-}
-
-.MiniActivityItem .actor {
-  height: 22px;
-}
-
-.MiniActivityList>h4 a {
-  font-size: 13px;
-  font-weight: 400;
-}
-
-
-.UserImage {
-  display: inline-block;
-  border-radius: 4px;
-  overflow: hidden;
-  background: linear-gradient(350deg,#cfced4,#e2e2e5);
-  line-height: 1;
-}
-
-.UserImage.size-xsmall {
-  border-radius: 3px;
-}
-
-.UserImage.size-xsmall div, .UserImage.size-xsmall img {
-  width: 22px;
-  height: 22px;
-}
-
-.UserImage img {
-  display: inline-block;
-}
 img {
   vertical-align: middle;
 }
@@ -102,121 +43,9 @@ img {
   border: 0;
 }
 
-.MiniActivityItem>.body {
-  flex-grow: 1;
-  margin: 1px 0 0 5px;
-  font-size: 14px;
-  color: #5d5966;
-  display: flex;
-  align-items: baseline;
-  min-width: 0;
-}
 
-.MiniActivityItem .UserImage {
-  vertical-align: 1px;
-}
-
-.MiniActivityItem>.body span {
-  display: block;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.MiniActivityItem>.body a.commit {
-  padding: 1px 5px;
-  color: #908c99;
-  border: 1px solid rgba(0,0,0,.07);
-  border-radius: 3px;
-  font-family: "Source Code Pro",monospace;
-  font-size: 12px;
-}
-
-.MiniActivityItem>.body b {
-  font-weight: 500;
-  color: #2e2d33;
-}
-
-
-.MiniActivityItem>.body a.build {
-  margin-left: 4px;
-  font-size: 12px;
-}
-
-.MiniActivityItem>.status {
-  margin-top: -1px;
-  margin-left: 10px;
-  white-space: nowrap;
-}
-
-.MiniActivityItem>.status span {
-  color: #aeacb5;
-  font-size: 12px;
-}
-
-
-.SectionHeader {
-  margin-top: 0;
-  font-family: "Exo 2", sans-serif;
-  letter-spacing: 1px;
-  font-size: 12px;
-  font-weight: 600;
-  text-transform: uppercase;
-  
-}
-
-.glyphicon {
-  position: relative;
-  top: 1px;
-  display: inline-block;
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-}
-
-
-.glyphicon-arrow-right {
-  content: "\e092";
-}
-
-
-:before {
-  box-sizing: border-box;
-}
-
-
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  display: none;
-  float: left;
-  min-width: 160px;
-  padding: 5px 0;
-  margin: 2px 0 0;
-  font-size: 14px;
-  text-align: left;
-  list-style: none;
-  background-color: #fff;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0,0,0,.15);
-  border-radius: 4px;
-  -webkit-box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
-  box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
-}
-
-.dropdown-menu-right {
-  right: 0;
-  left: auto;
-}
 
 /* second box */
-
-
 .SectionHeader {
   margin-top: 0;
   font-family: "Exo 2",sans-serif;
@@ -241,86 +70,9 @@ ol, ul {
 }
 
 
-.dropdown-menu-right {
-  right: 0;
-  left: auto;
-}
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  display: none;
-  float: left;
-  min-width: 160px;
-  padding: 5px 0;
-  margin: 2px 0 0;
-  font-size: 14px;
-  text-align: left;
-  list-style: none;
-  background-color: #fff;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0,0,0,.15);
-  border-radius: 4px;
-  -webkit-box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
-  box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
-}
-
-.PipelineTableStageStatusCell {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
-
-
-.PipelineTableStageStatusCell>a {
-  margin-right: 8px;
-}
-
-.PipelineTableStageStatusCell>div p {
-  margin: 0;
-}
-
-
-.PipelineTableStageStatusCell .line-2 {
-  display: flex;
-  align-items: center;
-}
-
-.PipelineTableStageStatusCell.mini .line-2 {
-  margin-top: 2px;
-}
-
-.PipelineTableStageStatusCell .branch {
-  margin-right: 5px;
-  font-size: 12px;
-  color: #908c99;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  flex: 0 1 auto;
-}
-
-
-.PipelineTableStageStatusCell .commit {
-  flex: 0 0 auto;
-  font-size: 12px;
-  color: #908c99;
-  font-family: "Source Code Pro",monospace;
-  border: 1px solid rgba(0,0,0,.07);
-  border-radius: 3px;
-  padding: 2px 4px;
-  line-height: 1;
-  display: inline-block;
-  white-space: nowrap;
-}
-
 .small-font {
   font-size: 12px;
-  color: #337ab7;
+  color: #67b3f6;
 }
 
 .pipeline-title {
@@ -345,53 +97,6 @@ ol, ul {
   border-width: 2px;
 }
 
-.PipelineTableStageStatusCell .date {
-  margin-left: 7px;
-  font-size: 12px;
-  color: black;
-}
-
-/* dropbutton */
-
-.dropbtn {
-  background-color: #536977;
-  color: white;
-  padding: 0;
-  margin: 0;
-  font-size: 10px;
-  border: none;
-  cursor: pointer;
-  border-radius: 10px;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
 
